[tool.poetry]
name = "Canary"
version = "4.0.0"
description = ""
license = "GPL-3.0-only"
repository = "https://github.com/idoneam/Canary"
readme = "README.md"
authors = []
packages = [
  { include = "canary" },
]

[tool.poetry.scripts]
canary = "canary.main:main"

[tool.poetry.dependencies]
python = "~3.10.0"
beautifulsoup4 = "^4.12.2"
sympy = "^1.9"
requests = ">=2.30.0,<3"
tabulate = "~0.8.9"
"discord.py" = {extras = ["voice"], version = "~1.6.0"}
opencv-python = "==4.6.0.66"
pytz = ">=2020.5"
numpy = "^1.21.1"
aiohttp = "~3.7.4"
urllib3 = ">=1.25.3"
feedparser = "^6.0.8"
regex = "^2023.5.5"
googletrans = "==4.0.0rc1"
yt-dlp = "^2021.12.27"
Pillow = "^8.3.2"
uvloop = {version="0.16.0", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
bidict = "^0.22.0"
aiosqlite = "^0.17.0"
lxml = "^4.9.1"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "~1.2.0"
types-beautifulsoup4 = "^4.11.5"
types-regex = "^2022.8.17.0"
types-requests = "^2.28.9"
types-pytz = "^2022.2.1.0"
types-tabulate = "^0.8.11"

[tool.black]
line-length = 120

